# Active-Suspension

./: .gitignore  LICENSE  README.md  helper_script.sh
gym-gazebo/gym_gazebo.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/: CMakeLists.txt  package.xml
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/config/: control.yaml  joint_names_lsd.yaml
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/include/lsd/: gazebo_ros_realsense.h
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/launch/: custom_world.launch  gazebo.launch  rviz.launch
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/lsd/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/ramp/: model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/rock_big/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/rock_jagged/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/rock_small/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/rocky_surface/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/models/step/: model.config  model.sdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/rviz/: urdf.rviz
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/scripts/: README.md
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/scripts/RL/: TD3.py  setup.py  test.py
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/scripts/helper_scripts/: key_drive.py  link_angles.py  pub_link_angles.py  reset_pose.py
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/urdf/: lsd.csv  lsd.urdf
gym-gazebo/gym_gazebo/envs/installation/active_ws/src/lsd/worlds/: empty.world  obstacles.world  rocky.world
(+28 files in other folders)
