<package format="2">
  <name>lsd</name>
  <version>1.0.0</version>

  <description>
    <p>URDF Description package for lsd</p>
    <p>This package contains configuration data, 3D models and launch files
for lsd robot</p>
  </description>

  <author>MRM</author>
  <maintainer email="leanderdsouza1234@gmail.com">Leander-Stephen-D'Souza</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>hector_gazebo_plugins</depend>

  <depend>octomap_msgs</depend>
  <depend>joy</depend>
  <depend>effort_controllers</depend>
  <depend>geodesy</depend>
  <depend>control_toolbox</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nodelet</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>kdl_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>sophus</depend>


  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      gazebo_resource_path="${prefix}/resources"/>
      />
  </export>




</package>